fix z-index

--- a/includes/call-style.css
+++ b/includes/call-style.css
@@ -409,7 +409,7 @@ ul li {
     border-radius: 50%;
     cursor: pointer;
     transition: opacity 0.3s, transform 0.3s;
-    z-index: 1000;
+    z-index: 99;
 }
 
 .scroll-top:hover {
